<resources>
    <string name="app_name">PECOLX</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_signup">signup</string>
    <string name="title_activity_sidebar">sidebar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">logout</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_post_ad">post_ad</string>
    <string name="title_activity_json_ala_pnga">json_ala_pnga</string>
    <string name="title_activity_display_listview">display_listview</string>
    <string name="title_activity_sign_up">Sign_up</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">confirm Password</string>
    <string name="hint_contact">contact</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_cepassword">Enter the password</string>
    <string name="err_msg_cpassword">password does not match</string>
    <string name="err_msg_vpassword">enter valid password</string>
    <string name="title_activity_imagetest">imagetest</string>
    <string name="title_activity_my_ads_displaylistview">my_ads_displaylistview</string>


</resources>
